# RoboticsFinalProject

./: README.md  apartment.sh  project_info.txt
brain/: CMakeLists.txt  brain.cc  grid.cc  grid.hh  robot.cc  robot.hh
mbot/control_program/: control_program.ino  viz.cc
mbot/control_program/viz_run/: CMakeLists.txt  Makefile  grid.cc  grid.hh  main  main.cc
models/camera_sensor/: model.sdf
models/led_sensor/: model.config  model.sdf
models/tankbot/: model.sdf
plugins/: Makefile
plugins/LedPlugin/: CMakeLists.txt  FlashLightPlugin.hh  LedPlugin.cc  LedPlugin.hh  Makefile
worlds/: apartment.world  apartmentv2.world  apartmentv3.world  apartmentv4.world  apartmentv5.world
